fix text wrapping issue

--- a/src/app/schedule-line/schedule-line-info/schedule-line-info.component.scss
+++ b/src/app/schedule-line/schedule-line-info/schedule-line-info.component.scss
@@ -56,6 +56,10 @@ h4 {
     color: $light-blue;
 }
 
+app-schedule-line-alert {
+    white-space: normal;
+}
+
 @media (min-width: $break-point) {
     .left-info, .info-item {
         align-items: flex-start;
